# Backend-python

./: .gitignore  README.md  dockerfile  pyproject.toml  requirements.txt
backend_python/: Test1.py  Test2.py  Test3.py  Test4.py
backend_python/src/: Test1.py  controller.py
backend_python/src/Services/: Folder.py  User.py
backend_python/src/data/: folder1.json  folder2.json  folder5.json
backend_python/src/repositories/: File.py  Folder.py  User.py
backend_python/src/services/: Folder.py
