[tool.poetry]
name = "backend-python"
version = "0.1.0"
description = ""
authors = ["jnicolasdz <jndiazs@udistrital.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
starlette = "^0.45.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
